Bug 527018 - [refactoring] Replace use of Number constructors by valueOf
Also BREE upgrade for org.eclipse.update.core, since
Integer.valueOf(int) is not available in 1.4

Version increment for Eclipse Photon 4.8
- org.eclipse.ant.core


Change-Id: I4bec77aacac2fc2ee845ceb2e56e6ec58add777d
Signed-off-by: Karsten Thoms <karsten.thoms@itemis.de>